fixing padding on mobile

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ p, li, a {
 }
 
 p, li {
-    padding: 0px 100px 0 100px;
+    padding: 0px 50px 0 50px;
     line-height: 1.5;
 }
 
